--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -127,6 +127,23 @@ h1 {
   background-position: center;
 }
 
+.hero-logo {
+  width: 100%;
+  height: 20%;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-logo__img {
+  width: 6.5rem;
+}
+
 .hero-layer-group {
   height: 100%;
   width: 100%;
@@ -167,12 +184,12 @@ h1 {
   width: 100%;
 
   position: absolute;
-  bottom: 10%;
+  bottom: 12%;
   left: 0;
 
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 2.5rem;
 }
 
 .hero-btn-group {
@@ -203,6 +220,10 @@ h1 {
   margin-bottom: 0.2em;
 }
 
+.hero-feature-description {
+  opacity: 0.75;
+}
+
 .hero-feature-icon {
   width: 1.35em;
 }
@@ -213,5 +234,5 @@ h1 {
 
 .hero-feature-separator {
   width: 1em;
-  opacity: 0.5;
+  opacity: 0.65;
 }
